--- a/biodata.html
+++ b/biodata.html
@@ -25,7 +25,7 @@
               <img src="images/twitter.png" alt="Twitter" class="social-image">
             </a></li>
             <li><a href="https://www.instagram.com" class="social-icon" target="_blank">
-              <img src="images/instagram.png" alt="Instagram" class="social-image">
+              <img src="images/Instagram.png" alt="Instagram" class="social-image">
             </a></li>
             <li><a href="https://www.linkedin.com" class="social-icon" target="_blank">
               <img src="images/linkedin.png" alt="LinkedIn" class="social-image">
